# mic-indicator

./: .gitignore  CMakeLists.txt  README.md
src/: AudioProcessor.cpp  AudioProcessor.h  Config.cpp  Config.h  MicTrayIcon.cpp  MicTrayIcon.h  PipeWireManager.cpp  PipeWireManager.h  main.cpp
